3/api-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: simpsonjon/chessplat:api
        name: api
        ports:
        - containerPort: 3000
      restartPolicy: Always
