3/auth-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      volumes:
        - name: auth-cred
          secret:
            secretName: auth-cred
      containers:
      - image: simpsonjon/chessplat:auth
        name: auth
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: auth-cred
          readOnly: true
          mountPath: "/secret/"
      restartPolicy: Always
