3/api-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  selector:
    app: api
  type: NodePort
