3/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth-service
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: auth
  type: NodePort
