3/chess-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-service
  labels:
    app: chess
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: chess
  type: NodePort
